# OfflineRLPlayGround

./: .gitignore  CLAUDE.md  README.md  analysis_deterministic_failure.py  analysis_deterministic_failure_v2.py  analysis_trajectory_divergence.py  analyze_frequency.py  analyze_init_similarity.py  bc_dataloader_test.py  bc_gaussian.py  bc_official.py  bc_original.py  bc_p_success_cpu.py  check_exp.py  collect_pusht_demos.py  conversation_log_7ba81495.md  dp_case_study.py  dp_coverage_compare.py  dp_eval_video.py  dp_p_success_cpu.py  dp_p_success_gpu.py  dp_train.py  pyproject.toml  run_debug_exps.sh  run_iql_tune.sh  run_peg_offline.sh  run_peg_online.sh  run_peg_online_mc.sh  run_v2_all.sh  run_v2_offline.sh  run_v3_offline.sh  test_pickcube_spawn_coverage.py  test_pickcube_spawn_range.py
DPPO/: check_obs.py  collect_gpu_demos.py  collect_policy_demos.py  critic_analysis.py  critic_distribution_test.py  dataset.py  debug_eval_compare.py  debug_fbc_loss.py  debug_ppo.py  debug_ppo2.py  debug_ppo3.py  debug_ppo4.py  debug_ppo5.py  diagnose.py  eval_backend_compare.py  eval_cpu.py  eval_cpu_test.py  eval_image.py  evaluate.py  finetune.py  finetune_bc.py  finetune_bridge_ablate.py  finetune_filtered_bc.py  finetune_iql.py  finetune_reinforce.py  make_env.py  mc_exploitation.py  peg_insertion_easy.py  pretrain.py  pretrain_twostage.py  record_frac_zero.py  reward_scaler.py  visualize_decisive.py
MultiGaussian/: common.py  eval_cpu.py  eval_gpu.py  eval_mip_cpu.py  eval_mip_video.py  pretrain.py  pretrain_mip.py
RL/: EXPERIMENTS.md  analyze_iql_data.py  awr_finetune.py  (+46 more)
(+118 files in other folders)
